Paths.getメソッドへ記述修正